# try-game-jam

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
configured_files/: config.hpp.in
src/: CMakeLists.txt  aroundtheworld.cpp  aroundtheworld.hpp  asteroid.hpp  brick.cpp  brick.hpp  configuration.hpp  earth.hpp  loop_based.cpp  loop_based.hpp  main.cpp  refresher.hpp  satellite.hpp  shield.hpp  snake.cpp  snake.hpp  turn_based.cpp  turn_based.hpp  universe.hpp  utilities.hpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
